Minor updates to bashrc, tmux.conf, vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,23 @@
 set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
 
 # Change default leader key to Ctrl-Space
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-# Set default shell to Zsh
+# Set default shell to Zsh and refresh Zsh environment
 set-option -g default-shell /bin/zsh
+# set-option -g default-command "source ~/.zshrc; tmux"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+# change window index to start at 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Explicitly disable pane synchronization
+setw -g synchronize-panes off
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
